examples/test/testpolicy11319.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11319
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key28: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value25
          key26: value28
          key8: value18
      podSelector:
        matchLabels:
          key36: value31
          key31: value36
